syntax = "proto3";

service OrderBook {
  // Get the whole order book.
  rpc FetchOrderBook(FetchOrderBookRequest) returns (FetchOrderBookResponse) {}

  // Get the worst price for the limit order
  rpc GetWorstOrderPrice(GetWorstOrderPriceRequest) returns (GetWorstOrderPriceResponse) {}
}


enum OrderType {
  UNKNOWN = 0;
  ASK = 1;
  BID = 2;
}

message Order {
  OrderType order_type = 1;
  float price = 2;
  float quantity = 3;
}

message FetchOrderBookRequest {
  string symbol = 1;
}

message FetchOrderBookResponse {
  repeated Order orders = 1;
}

message GetWorstOrderPriceRequest {
  string symbol = 1;
  float quantity = 2;
  OrderType order_type = 3;
}

message GetWorstOrderPriceResponse {
  float price = 1;
}